--- a/index.html
+++ b/index.html
@@ -1,33 +1,14 @@
 <!doctype html>
 <html>
   <head>
-    <style>
-      body {
-        font-family: 'arial', sans-serif;
-         font-size: 15px;
-      }
-
-
-      h1 {
-        text-color: red;
-        text-background: transparent;
-        text-decoration: none;
-      }
-
-
-      h2 {
-        text-color: black;
-        text-background: transparent;
-        text-decoration: none;
-      }
-    </style>
+    <link rel=stylesheet href=/javascript/style.css type="text/css">
     <title>javacript test</title>
   </head>
   <body>
     <h1>Javascript test</h1>
     <h2>With W3schools:</h2>
     <ul>
-      <li><a href=/test/1.html>test 1: the Lightbulb</a></li>
+      <li><a href=/javascript/tests/1.html>test 1: the Lightbulb</a></li>
       
     </ul>
   </body>
