Update index.html title element
was showing 'javscript test' rather than 'javascript test'

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel=stylesheet href=/javascript/style.css type="text/css">
-    <title>javacript test</title>
+    <title>javascript test</title>
   </head>
   <body>
     <h1>Javascript test</h1>
