--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link rel=stylesheet href=/javascript/style.css type="text/css">
+    <link rel="stylesheet" href="/javascript/style.css" type="text/css">
     <title>javascript test</title>
   </head>
   <body>
