--- a/tests/1.html
+++ b/tests/1.html
@@ -24,6 +24,10 @@
     <img id="lightBulb" src="/javascript/images/pic_bulboff.gif" style="width:100px">
     
     <button onclick="document.getElementById('lightBulb').src='/javascript/images/pic_bulboff.gif'">Turn off the light</button>
+
+    <p>
+      Click <a href="/javascript">here</a> to go back to the main page(home page)
+    </p>
     
   </body>
   
