--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html>
   <head>
     <link rel="stylesheet" href="/javascript/style.css" type="text/css">
-    <title>javascript test</title>
+    <title>
+      Javascript test
+    </title>
   </head>
   <body>
-    <h1>Javascript test</h1>
-    <h2>With W3schools:</h2>
+    <h1>
+      Javascript testing
+    </h1>
+    <h2>
+      With <a href="https://w3schools.com">W3Schools</a>:
+    </h2>
     <ul>
-      <li><a href=/javascript/tests/1.html>test 1: the Lightbulb</a></li>
-      
+      <li><a href="/javascript/tests/1.html">test 1: the Lightbulb</a></li>
+      <li><a href="/javascript/tests/2.html">test 2: the Alert Box</a></li>
     </ul>
   </body>
 </html>
