--- a/tests/1.html
+++ b/tests/1.html
@@ -6,6 +6,8 @@
     <title>Test #1</title>
     
     <link rel="stylesheet" href="/javascript/style.css" type="text/css">
+
+    <script src="/tests/Alert_Box.js"></script>
     
   </head>
   
