--- a/tests/1.html
+++ b/tests/1.html
@@ -7,7 +7,7 @@
     
     <link rel="stylesheet" href="/javascript/style.css" type="text/css">
 
-    <script src="/tests/Alert_Box.js"></script>
+    <script src="/tests/alert_box.js"></script>
     
   </head>
   
